--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
     "vuetify": "^1.5.5",
-    "vuetify-loader": "^1.2.1",
-    "@nuxtjs/axios": "^5.3.6"
+    "vuetify-loader": "^1.2.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "@vue/test-utils": "^1.0.0-beta.27",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
+    "lodash.clonedeep": "^4.5.0",
+    "nodemon": "^1.18.9",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue-jest": "^3.0.3"
   }
 }
