Add test settings

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "vuetify-loader": "^1.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.4",
     "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^24.1.0",
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "^24.7.1",
+    "babel-preset-vue-app": "^2.0.0",
     "jest": "^24.1.0",
     "lodash.clonedeep": "^4.5.0",
     "nodemon": "^1.18.9",
